<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.zkyong.demo</groupId>
	<artifactId>demo-parent</artifactId>
	<version>0.0.1</version>
	<packaging>pom</packaging>

	<!-- manage the version of repostitory -->
	<properties>
		<spring.version>5.1.0.RELEASE</spring.version>
	</properties>

	<!-- manage repostitories -->
	<dependencyManagement>
		<dependencies>
			<!-- https://mvnrepository.com/artifact/com.thoughtworks.xstream/xstream -->
			<dependency>
				<groupId>com.thoughtworks.xstream</groupId>
				<artifactId>xstream</artifactId>
				<version>1.4.7</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/dom4j/dom4j -->
			<dependency>
				<groupId>dom4j</groupId>
				<artifactId>dom4j</artifactId>
				<version>1.6.1</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/net.sourceforge.jexcelapi/jxl -->
			<dependency>
				<groupId>net.sourceforge.jexcelapi</groupId>
				<artifactId>jxl</artifactId>
				<version>2.6.10</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/xmlpull/xmlpull -->
			<dependency>
				<groupId>xmlpull</groupId>
				<artifactId>xmlpull</artifactId>
				<version>1.1.3.1</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
			<dependency>
				<groupId>mysql</groupId>
				<artifactId>mysql-connector-java</artifactId>
				<version>5.1.34</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/com.belerweb/pinyin4j -->
			<dependency>
				<groupId>com.belerweb</groupId>
				<artifactId>pinyin4j</artifactId>
				<version>2.5.1</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-context</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/org.springframework/spring-web -->
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-web</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/org.springframework/spring-tx -->
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-tx</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/org.springframework/spring-jdbc -->
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-jdbc</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/org.springframework/spring-aop -->
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-aop</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/org.springframework/spring-aspects -->
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-aspects</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/org.springframework/spring-test -->
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-test</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/org.mybatis/mybatis -->
			<dependency>
				<groupId>org.mybatis</groupId>
				<artifactId>mybatis</artifactId>
				<version>3.4.6</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/org.mybatis/mybatis-spring -->
			<dependency>
				<groupId>org.mybatis</groupId>
				<artifactId>mybatis-spring</artifactId>
				<version>1.3.2</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/junit/junit -->
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>4.12</version>
				<scope>test</scope>
			</dependency>
			<!-- https://mvnrepository.com/artifact/org.mockito/mockito-all -->
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-all</artifactId>
				<version>1.10.19</version>
				<scope>test</scope>
			</dependency>
			<!-- https://mvnrepository.com/artifact/com.mchange/c3p0 -->
			<dependency>
				<groupId>com.mchange</groupId>
				<artifactId>c3p0</artifactId>
				<version>0.9.5.2</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/tk.mybatis/mapper -->
			<dependency>
				<groupId>tk.mybatis</groupId>
				<artifactId>mapper</artifactId>
				<version>3.4.6</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>1.7.25</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-log4j12</artifactId>
				<version>1.7.25</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
			<dependency>
				<groupId>javax.servlet</groupId>
				<artifactId>javax.servlet-api</artifactId>
				<version>3.1.0</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/com.caucho/hessian -->
			<dependency>
				<groupId>com.caucho</groupId>
				<artifactId>hessian</artifactId>
				<version>4.0.38</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/net.sourceforge.tess4j/tess4j -->
			<dependency>
				<groupId>net.sourceforge.tess4j</groupId>
				<artifactId>tess4j</artifactId>
				<version>3.4.0</version>
			</dependency>
			<dependency>
			    <groupId>org.jdom</groupId>
			    <artifactId>jdom2</artifactId>
			    <version>2.0.6</version>
			</dependency>
			<dependency>
			    <groupId>jaxen</groupId>
			    <artifactId>jaxen</artifactId>
			    <version>1.1.1</version>
	            <exclusions>
	                <exclusion>
	                    <artifactId>icu4j</artifactId>
	                    <groupId>com.ibm.icu</groupId>
	                </exclusion>
	            </exclusions>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<!-- manage modules -->
	<modules>
		<module>demo-common</module>
		<module>demo-util</module>
		<module>demo-service-user</module>
		<module>demo-web-home</module>
		<module>demo-test</module>
	</modules>

	<!-- manage plugins -->
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.5.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>